# task-trasker

./: README.md  database.db  pyproject.toml
client/: index.html  main.js
client/common/css/: common_css.css
client/common/js/: check_error.js  check_regexp_data.js  create_card.js  html_create_common.js
client/employees/css/: employee.css
client/employees/js/components/CRUD/: employee_add_new.js  employee_init.js
client/employees/js/components/render/: html_create_employee.js
client/tasks/css/: tasks.css
client/tasks/js/CRUD/: task_add_new.js  task_delete.js  task_init.js  task_update.js
client/tasks/js/render/: html_create_task.js  task_open.js  task_render.js
server/: app.py
server/controllers/: __init__.py  employee_controller.py  task_controller.py
server/data_base/: __init__.py  database.db
server/migrations/versions/: 20d530ea6d1d_initialdb.py
server/models/: __init__.py  employee_models.py  task_models.py
